@startuml
' ============================================================================
' Diagrama de Clases - UC-008: Gestión de Aulas
' Sistema de Gestión de Horarios FICCT
' Fecha: 28 de Octubre, 2025
' ============================================================================

skinparam classAttributeIconSize 0
skinparam roundcorner 10

' ============================================================================
' CAPA DE PRESENTACIÓN (UI)
' ============================================================================

class "index.blade.php" as AulasView <<Boundary>> {
  - lista_aulas: tabla HTML
  - boton_nueva: link
  - boton_editar: link
  - boton_eliminar: form
  --
  + mostrarListaAulas(): HTML
  + navegarCrear(): GET
  + navegarEditar(id): GET
  + eliminarAula(id): DELETE
}

' ============================================================================
' CAPA DE CONTROL
' ============================================================================

class AulaController <<Control>> {
  --
  + index(): View
  + create(): View
  + store(request: Request): RedirectResponse
  + edit(aula: Aula): View
  + update(request: Request, aula: Aula): RedirectResponse
  + destroy(aula: Aula): RedirectResponse
}

' ============================================================================
' CAPA DE ENTIDAD
' ============================================================================

class Aula <<Entity>> {
  - id: bigint
  - nombre: string
  - piso: integer
  - tipo: string
  - capacidad: integer
  - created_at: timestamp
  - updated_at: timestamp
  --
  + horarios(): Collection<Horario>
}

class Horario <<Entity>> {
  - id: bigint
  - grupo_id: bigint
  - aula_id: bigint
  - dia_semana: string
  - hora_inicio: time
  - hora_fin: time
  --
  + aula(): Aula
  + grupo(): Grupo
}

' ============================================================================
' RELACIONES
' ============================================================================

AulasView ..> AulaController : <<request>> route('aulas.index')
AulaController --> Aula : <<CRUD>>
AulaController ..> AulasView : <<render>> view('aulas.index')

Aula "1" --> "*" Horario : tiene asignados

' ============================================================================
' NOTAS
' ============================================================================

note right of AulasView
  **Vista Lista de Aulas**
  - Tabla con aulas registradas
  - Columnas: Nombre, Piso, Tipo, Capacidad
  - Botón "Registrar Nueva Aula"
  - Link "Editar" por cada aula
  - Botón "Eliminar" con confirmación
  - Mensaje de estado al crear/editar/eliminar
  - Ruta: resources/views/aulas/index.blade.php
end note

note left of AulaController
  **Controlador de Gestión de Aulas**

  index():
    - Obtiene todas las aulas
    - Aula::all()
    - Retorna vista index

  store(Request):
    1. Valida datos (nombre único, piso, tipo, capacidad)
    2. Capacidad nullable, min:1
    3. Aula::create($validatedData)
    4. Redirige con mensaje de éxito

  update(Request, Aula):
    1. Valida con Rule::unique()->ignore($aula->id)
    2. Actualiza aula con validated data
    3. $aula->update($validatedData)
    4. Redirige a aulas.index

  destroy(Aula):
    - $aula->delete()
    - Elimina aula de la base de datos
end note

note bottom of Aula
  **Entidad Aula**
  - Modelo Eloquent
  - Tabla: aulas
  - Relación hasMany: Horario (clases asignadas)
  - Fillable: nombre, piso, tipo, capacidad
  - Nombre único en base de datos
  - Capacidad opcional (nullable), mínimo 1
  - Tipo: Aula normal, Laboratorio, Auditorio, etc.
end note

@enduml
